--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -29,10 +29,10 @@
     <body class="">
 
         {% block header %}
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="py-0 navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-xxl">
                     <a class="navbar-brand" href="/">
-                        <img height="60" width="240" src="/static/index/images/OSG-Portal-Logo.png" alt="OSG Portal Logo">
+                        <h2 class="text-primary mb-0">OSG Portal</h2>
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -43,11 +43,15 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
+                                <a class="nav-link" href="/application">Sign-up</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="/documentation">Documentation</a>
                             </li>
                         </ul>
-                        <a class=" ms-auto btn btn-primary" aria-current="page" href="/application">Apply Now</a>
-
+                        {% if url_for(request.endpoint) != '/application' %}
+                            <a class=" ms-auto btn btn-primary py-1 px-2" aria-current="page" href="/application">Sign Up</a>
+                        {% endif %}
                     </div>
                 </div>
             </nav>
