--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -4,22 +4,42 @@
 
 {% block script %}
     <script defer src="/static/js/pages/application.js"  type="application/javascript"></script>
+    <script defer src="/static/js/pages/ospool-v1.js" type="application/javascript"></script>
+{% endblock %}
+
+{% block head %}
+    <style>
+        .top-5 {
+            top: 5rem;
+        }
+        .text-overlay {
+            position: absolute;
+            text-align: center;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            background: #eaeaeaba;
+            display: flex;
+        }
+
+
+
+    </style>
 {% endblock %}
 
 {% block body %}
+    <div class="bookends bg-light py-4">
+        <h1 class="text-center accent-text">No Proposals. No Allocations.</h1>
+        <h3 class="text-center accent-text fw-light">Harness the Capacity of the OSPool.</h3>
+    </div>
     <div class="container-xxl py-4">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-7 col-lg-8 col-md-10">
-                <h1>Sign-up for Capacity</h1>
                 <p>
-                    No proposals! No allocations! If you are a researcher affiliated with a US Academic Institution,
-                    the capacity of the OSPool is available for you to harness.
+                    If you are a researcher affiliated with a US Academic Institution,
+                    the capacity of the <a href="https://osg-htc.org/services/open_science_pool">OSPool</a> is available for you to harness.
                 </p>
-                <p>
-                    <b>
-                        All you have to do is the sign-up here!
-                    </b>
-                </p>
+                <h5>Sign-up</h5>
                 <form id="consultation-form" name="consultation-form" method="post" action="">
                     <div>
                         <label for="full-name" class="form-label">Full Name</label>
@@ -69,8 +89,47 @@
                     <button id="submit" type="submit" name="submit" class="form-control btn btn-primary mt-2 w-auto px-3">Submit</button>
                 </form>
             </div>
-            <div class="col-12 col-xl-7 col-lg-8 col-md-10">
-
+            <div class="d-none d-xl-block col-lg-4">
+                <div class="sticky-top top-5">
+                    <div class="">
+                    <div id="ospool-user-institutions"></div>
+                    <div id="ospool-user-institutions-overlay" class="">
+                        <div class="text-dark my-auto  pt-1 pt-md-0 d-flex">
+                            <h4 class="text-center d-inline-block mx-auto mb-0">
+                                <span class="fs-3 d-inline-block">On the <b class="text-primary">OSPool</b> on <span id="ospool-date"></span></span><br>
+                                <span class="d-inline-block job-text py-2">
+                                    <b class="d-inline-block text-primary">
+                                        <span id="ospool-jobs">1</span> jobs
+                                    </b> completed
+                                </span><br>
+                                <span class="d-inline-block">Placed by</span>
+                                <b class="d-inline-block text-primary">
+                                    <span id="ospool-users">1</span> researchers
+                                </b><br>
+                                <span class="d-inline-block">Triggering </span>
+                                <b class="d-inline-block text-primary">
+                                    <span id="ospool-file-transfers">1</span> file transfers
+                                </b><br>
+                                <span class="d-inline-block">Consuming</span>
+                                <b class="d-inline-block text-primary">
+                                    <span id="ospool-core-hours">1</span> core hours
+                                </b>
+                            </h4>
+                        </div>
+                    </div>
+                </div>
+                    <div class="position-relative mt-4 mx-4 hover-shadow">
+                        <a href="https://map.opensciencegrid.org/map/iframe?view=OSPool#15.737115,-90.140436|3">
+                            <picture>
+                                <source srcset="/static/images/OSPool_Contributors.webp">
+                                <img class="img-fluid rounded-3" src="/static/images/OSPool_Contributors.png">
+                            </picture>
+                            <div class="text-overlay mb-0 rounded-3 text-dark">
+                                <h4 class="m-auto accent-text">OSPool Contributor Map</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
