--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -30,7 +30,7 @@
 {% block body %}
     <div class="bookends bg-light py-4">
         <h1 class="text-center accent-text">No Proposals. No Allocations.</h1>
-        <h3 class="text-center accent-text fw-light">Harness the Capacity of the OSPool.</h3>
+        <h3 class="text-center accent-text fw-light">Harness the Capacity of the OSPool</h3>
     </div>
     <div class="container-xxl py-4">
         <div class="row justify-content-center">
