Remove extraneous an

--- a/portal/website/templates/index.html
+++ b/portal/website/templates/index.html
@@ -81,7 +81,7 @@
                     </b>
                 </p>
                 <p>
-                    Beyond the OSPool's Capacity, an applying now provides access to OSG services including
+                    Beyond the OSPool's Capacity, applying now provides access to OSG services including
                     OSG-Operated Access Points, and the Open Science Data Federation. Together these services
                     provide researchers with a way to manage jobs, resources to run these jobs, and a data caching
                     infrastructure to keep latency low.
