--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -48,6 +48,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/documentation">Documentation</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://portal.osg-htc.org/documentation/support_and_training/training/osgusertraining/">User Training</a>
+                            </li>
                         </ul>
                         {% if url_for(request.endpoint) != '/application' %}
                             <a class=" ms-auto btn btn-primary py-1 px-2" aria-current="page" href="/application">Sign Up</a>
