--- a/portal/website/templates/event-request.html
+++ b/portal/website/templates/event-request.html
@@ -69,7 +69,7 @@
                         <input id="event-date" name="event-date" class="form-control" required>
                     </div>
                     <div class="pt-3">
-                        <label for="participant-count" class="form-label">Expected number of participants (Leave empty if unsure)</label>
+                        <label for="participant-count" class="form-label">Approximate number of participants</label>
                         <input id="participant-count" name="participant-count" type="number" class="form-control">
                     </div>
                     <div class="pt-3">
