Remove twitter + adjust padding

--- a/portal/website/templates/application.html
+++ b/portal/website/templates/application.html
@@ -76,7 +76,7 @@
                         </label>
                         <textarea id="typical-computation" name="typical-computation" class="form-control" rows="4" required></textarea>
                     </div>
-                    <div>
+                    <div class="pt-3">
                         <label for="resource-needs" class="form-label">What are your resource needs for a typical computation? Let us know about data sizes, computation runtime, and/or CPU/GPU/memory needs.*</label>
                         <textarea id="resource-needs" name="resource-needs" class="form-control" rows="4" required></textarea>
                     </div>
@@ -86,7 +86,7 @@
                         </label>
                         <textarea id="computation-amount" name="computation-amount" class="form-control" rows="4" required></textarea>
                     </div>
-                    <div>
+                    <div class="pt-3">
                         <label for="names-and-languages" class="form-label">What program(s) or coding language(s) do you use?*</label>
                         <textarea id="names-and-languages" name="names-and-languages" class="form-control" rows="4" required></textarea>
                     </div>
