Update homepage text

--- a/portal/website/templates/index.html
+++ b/portal/website/templates/index.html
@@ -82,9 +82,10 @@
                 </p>
                 <p>
                     Beyond the OSPool's Capacity, applying now provides access to OSG services including
-                    OSG-Operated Access Points, and the Open Science Data Federation. Together these services
-                    provide researchers with a way to manage jobs, resources to run these jobs, and a data caching
-                    infrastructure to keep latency low.
+                    OSG-Operated Access Points, and the Open Science Data Federation (OSDF). Together
+                    these services provide researchers with a way to automate the management of their
+                    workloads, processing and storage capacity to execute these workloads, and a data
+                    staging infrastructure to facilitate effective remote access to data.
                 </p>
                 <div class="row my-4 justify-content-center">
                     <div class="col-4">
